--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
     "antd": "^3.24.2",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
@@ -20,12 +21,14 @@
     "cookie": "^0.4.0",
     "deep-object-diff": "^1.1.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "next": "^9.0.4",
     "next-antd-aza-less": "^1.0.2",
+    "next-compose-plugins": "^2.2.0",
     "node-sass": "^4.12.0",
     "nookies": "^2.0.8",
+    "null-loader": "^3.0.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-hook-form": "^3.23.18"
+    "react-dom": "^16.9.0"
   }
 }
