--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "null-loader": "^3.0.0",
     "parse-full-name": "^1.2.4",
     "react": "^16.9.0",
+    "react-country-flag": "^1.1.0",
     "react-dom": "^16.9.0",
     "react-responsive": "^8.0.1"
   }
