--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development next",
-    "build": "NODE_ENV=production next build",
-    "start": "next start"
+    "build": "npm run lint-fix && NODE_ENV=production next build",
+    "start": "next start",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -33,5 +35,9 @@
     "react-country-flag": "^1.1.0",
     "react-dom": "^16.9.0",
     "react-responsive": "^8.0.1"
+  },
+  "devDependencies": {
+    "@wordpress/eslint-plugin": "^3.3.0",
+    "eslint": "^6.8.0"
   }
 }
