--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "deep-object-diff": "^1.1.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "next": "^9.0.4",
+    "next": "^9.1.6-canary.9",
     "next-antd-aza-less": "^1.0.2",
     "next-compose-plugins": "^2.2.0",
     "node-sass": "^4.12.0",
