--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
 		"node_modules/"
 	],
 	"rules": {
+		"linebreak-style": "off",
 		"camelcase": "off",
 		"no-console": "off",
 		"no-shadow": "off",
