--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "Patrick Villanueva",
   "license": "MIT",
   "dependencies": {
+    "@ant-design/compatible": "^1.0.4",
+    "@ant-design/icons": "^4.2.1",
     "antd": "^4.4.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
@@ -27,7 +29,7 @@
     "nookies": "^2.0.8",
     "parse-full-name": "^1.2.4",
     "react": "^16.9.0",
-    "react-country-flag": "^2.2.0",
+    "react-country-flag": "^1.1.0",
     "react-dom": "^16.9.0",
     "react-responsive": "^8.0.1"
   },
