--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.9.0",
     "react-country-flag": "^1.1.0",
     "react-dom": "^16.9.0",
+    "react-query": "^2.4.7",
     "react-responsive": "^8.0.1"
   },
   "devDependencies": {
